--- a/lib/demo.html
+++ b/lib/demo.html
@@ -1,10 +1,8 @@
 <meta charset="utf-8">
-<title>vue-imgview demo</title>
-<script src="./vue-imgview.umd.js"></script>
-
-<link rel="stylesheet" href="./vue-imgview.css">
+<title>vue-lookimg demo</title>
+<script src="./vue-lookimg.umd.js"></script>
 
 
 <script>
-console.log(vue-imgview)
+console.log(vue-lookimg)
 </script>
